[tool.poetry]
name = "tdd-1"
version = "0.1.0"
description = ""
authors = ["Sitthakarn Prasomsup <sitthakarn.p@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.dev-dependencies]
pytest = "*"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q"
testpaths = [
    "tests",
]
filterwarnings = [
    #"error",
    #"ignore::UserWarning",
    # note the use of single quote below to denote "raw" strings in TOML
    'ignore::PendingDeprecationWarning',
]

